# docs/swagger.json
@@ -38,13 +38,13 @@
                     "200": {
                         "description": "成功",
                         "schema": {
-                            "$ref": "#/definitions/model.User"
+                            "$ref": "#/definitions/models.User"
                         }
                     },
                     "500": {
                         "description": "内部错误",
                         "schema": {
-                            "$ref": "#/definitions/model.HTTPError"
+                            "$ref": "#/definitions/models.HTTPError"
                         }
                     }
                 }
@@ -76,13 +76,13 @@
                     "200": {
                         "description": "成功",
                         "schema": {
-                            "$ref": "#/definitions/model.Result"
+                            "$ref": "#/definitions/models.Result"
                         }
                     },
                     "500": {
                         "description": "内部错误",
                         "schema": {
-                            "$ref": "#/definitions/model.HTTPError"
+                            "$ref": "#/definitions/models.HTTPError"
                         }
                     }
                 }
@@ -90,7 +90,7 @@
         }
     },
     "definitions": {
-        "model.HTTPError": {
+        "models.HTTPError": {
             "type": "object",
             "properties": {
                 "code": {
@@ -113,7 +113,7 @@
                 }
             }
         },
-        "model.Result": {
+        "models.Result": {
             "type": "object",
             "properties": {
                 "code": {
@@ -143,7 +143,7 @@
                 }
             }
         },
-        "model.User": {
+        "models.User": {
             "type": "object",
             "properties": {
                 "age": {
